--- a/prolog/T2/makefile
+++ b/prolog/T2/makefile
@@ -2,6 +2,10 @@
 compile:
 	swipl -f db2svg.pl > desenhos.svg  2> stderr.txt
 
+# Compile the files and run the interpreter
+prolog:
+	swipl -s desenhos.pl programa.pl db2svg.pl
+
 # Run the program, showing the image SVG generated
 run:
 	display desenhos.svg
